# ubuilder

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LIBRARY_EMBEDDING_SUCCESS_REPORT.md  LICENSE  PORTABILITY_FIXES_APPLIED.md  PROJECT_COMPLETION.md  ProjectInstructions.md  README.md  build-all.bat  build-all.sh  create-release.ps1  create-release.sh  runtime_analysis.md
.github/: WORKFLOWS.md
.github/workflows/: badge.yml  build-static-php.yml  ci.yml  release.yml  validate-scripts.yml
build-system/: build-cross-platform.sh  build-examples.sh  build.bat  build.sh
docs/: README.md  architecture.md  cli-reference.md  quick-start.md  troubleshooting.md
docs/architecture/: ARCHITECTURE_AUDIT.md  CONFIG_FILE_SPEC.md  M1_HERMETIC_INTERPRETERS.md  M8_USER_DEPS.md  ROADMAP_NEXT.md  STATIC_LAUNCHER.md
docs/internals/: releases.md
docs/internals/architecture/: ARCHITECTURE_AUDIT.md  CONFIG_FILE_SPEC.md  M1_HERMETIC_INTERPRETERS.md
docs/user/: cli-reference.md  examples.md  getting-started.md  troubleshooting.md
examples/: BUILD_SYSTEM.md  CMakeLists.txt  PORTABILITY_IMPLEMENTATION_SUMMARY.md  PORTABILITY_TESTING.md  build-examples-linux.sh  build-examples-macos.sh  build-examples.bat  build-examples.ps1  build-examples.sh  test-examples-linux-no-runtime.sh  test-examples-macos-no-runtime.sh  test-examples-windows-no-runtime.bat
examples/nodejs/: main.js  ubuilder.json
examples/php/: sub.php
examples/php-hello/: main.php  sub.php  test-extensions.php  ubuilder.json
examples/python/: README.md  main.py  ubuilder.json
examples/python-hello/: ubuilder.json
scripts/: build-all.sh  create-release.ps1  create-release.sh  vendor-runtimes.sh
scripts/sandbox/: README.md  activate.sh  deactivate.sh
src/: CMakeLists.txt  main.c
src/core/: config.c  config.h  glob_match.c  glob_match.h  icon_embed.c  icon_embed.h  json_mini.c  json_mini.h  platform_compat.c  platform_compat.h  sha256.c  sha256.h  ubuilder.c  ubuilder.h  update_check.c  update_check.h
src/runtimes/: install_cache.c  nodejs_builder.c  nodejs_runtime.c  php_builder.c  php_runtime.c  php_static.c  php_static.h  python_builder.c  python_runtime.c  runtime_builder.c  runtime_builder.h  runtime_embedder.c  runtime_embedder.h  runtime_manager.c  runtime_manager.h
tests/: CMakeLists.txt  test_config.c  test_core.c  test_glob_match.c  test_icon_embed.c  test_main.c  test_php_builder.c  test_platform_compat.c  test_runtime_manager.c  test_sha256.c
tests/bundle/: README.md  assert-macos-portable.sh  run-bundle-tests.sh  run-tier3.sh
tests/bundle/fixtures/nodejs/: expected.txt  main.js  ubuilder.json
tests/bundle/fixtures/nodejs-with-deps/: expected.txt  main.js  package.json  ubuilder.json
tests/bundle/fixtures/nodejs-with-exclude/: expected.txt  main.js  package.json  ubuilder.json
tests/bundle/fixtures/php/: expected.txt  main.php  ubuilder.json
tests/bundle/fixtures/php-missing-ext/: composer.json  main.php  ubuilder.json
tests/bundle/fixtures/php-with-deps/: composer.json  expected.txt  main.php  ubuilder.json
tests/bundle/fixtures/python/: expected.txt  main.py  ubuilder.json
tests/bundle/fixtures/python-with-deps/: expected.txt  main.py  ubuilder.json
tests/bundle/fixtures/python-with-exclude/: expected.txt  main.py  requirements.txt  ubuilder.json
toolchains/: musl-linux-x86_64.cmake
